<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">"Couldn't open the page because the URL is invalid."</string>
    <string name="httpErrorUnsupportedScheme">"The protocol isn't supported."</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">(Unknown)</string>
    <string name="untitled">&lt;Untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">"Can't play this video."</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">"This video isn't valid for streaming to this device."</string>
    <string name="selectTextMode">Select text</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="storage_internal">Internal storage</string>
    <string name="storage_sd_card">SD card</string>
    <string name="storage_usb">USB storage</string>
    <string name="media_route_chooser_grouping_done" />
    <string name="wifi_display_notification_message" />
    <string name="wifi_display_notification_title" />
    <string name="symbol_picker_A">ÀÁÂÄÆÃÅĄĀ</string>
    <string name="symbol_picker_C">ÇĆČ</string>
    <string name="symbol_picker_D">Ď</string>
    <string name="symbol_picker_E">ÈÉÊËĘĚĒ</string>
    <string name="symbol_picker_G">Ğ</string>
    <string name="symbol_picker_L">Ł</string>
    <string name="symbol_picker_I">ÌÍÎÏĪİ</string>
    <string name="symbol_picker_N">ÑŃŇ</string>
    <string name="symbol_picker_O">ØŒÕÒÓÔÖŌ</string>
    <string name="symbol_picker_R">Ř</string>
    <string name="symbol_picker_S">ŚŠŞ</string>
    <string name="symbol_picker_T">Ť</string>
    <string name="symbol_picker_U">ÙÚÛÜŮŪ</string>
    <string name="symbol_picker_Y">ÝŸ</string>
    <string name="symbol_picker_Z">ŹŻŽ</string>
    <string name="symbol_picker_a">àáâäæãåąā</string>
    <string name="symbol_picker_c">çćč</string>
    <string name="symbol_picker_d">ď</string>
    <string name="symbol_picker_e">èéêëęěē</string>
    <string name="symbol_picker_g">ğ</string>
    <string name="symbol_picker_i">ìíîïīı</string>
    <string name="symbol_picker_l">ł</string>
    <string name="symbol_picker_n">ñńň</string>
    <string name="symbol_picker_o">øœõòóôöō</string>
    <string name="symbol_picker_r">ř</string>
    <string name="symbol_picker_s">§ßśšş</string>
    <string name="symbol_picker_t">ť</string>
    <string name="symbol_picker_u">ùúûüůū</string>
    <string name="symbol_picker_y">ýÿ</string>
    <string name="symbol_picker_z">źżž</string>
    <string name="symbol_picker_sym">…¥•®©±[]{}&lt;>`^\\|</string>
    <string name="symbol_picker_slash">\\</string>
    <string name="symbol_picker_1">¹½⅓¼⅛</string>
    <string name="symbol_picker_2">²⅔</string>
    <string name="symbol_picker_3">³¾⅜</string>
    <string name="symbol_picker_4">⁴</string>
    <string name="symbol_picker_5">⅝</string>
    <string name="symbol_picker_7">⅞</string>
    <string name="symbol_picker_0">ⁿ∅</string>
    <string name="symbol_picker_dollar">¢£€¥₣₤₱</string>
    <string name="symbol_picker_percent">‰</string>
    <string name="symbol_picker_star">†‡</string>
    <string name="symbol_picker_minus">–—</string>
    <string name="symbol_picker_plus">±</string>
    <string name="symbol_picker_opening_parenthesis">[{&lt;</string>
    <string name="symbol_picker_closing_parenthesis">]}></string>
    <string name="symbol_picker_exclamation">¡</string>
    <string name="symbol_picker_quote">“”«»˝</string>
    <string name="symbol_picker_question">¿</string>
    <string name="symbol_picker_comma">‚„</string>
    <string name="symbol_picker_equal">≠≈∞</string>
    <string name="symbol_picker_lt">≤«‹</string>
    <string name="symbol_picker_gt">≥»›</string>
    <string name="profileNameDefault">Default</string>
    <string name="profileNameWork">Work</string>
    <string name="profileNameHome">Home</string>
    <string name="profileNameSilent">Silent</string>
    <string name="profileNameNight">Night</string>
    <string name="profileNameAutomobile">Automobile</string>
    <string name="profileGroupPhone">Phone</string>
    <string name="profileGroupCalendar">Calendar</string>
    <string name="profileGroupGmail">Gmail</string>
    <string name="profileGroupEmail">Email</string>
    <string name="profileGroupSMS">SMS</string>
    <string name="wildcardProfile">Other</string>
    <string name="global_action_screenshot">Screenshot</string>
    <string name="global_actions_toggle_expanded_desktop_mode">Expanded desktop</string>
    <string name="global_actions_expanded_desktop_mode_on_status">Enabled</string>
    <string name="global_actions_expanded_desktop_mode_off_status">Disabled</string>
    <string name="reboot_system">Reboot phone</string>
    <string name="reboot_reboot">Reboot</string>
    <string name="reboot_recovery">Recovery</string>
    <string name="reboot_bootloader">Bootloader</string>
    <string name="reboot_bootmenu">Bootmenu</string>
    <string name="reboot_fastboot">Fastboot</string>
    <string name="reboot_download">Download</string>
    <string name="reboot_soft">Soft reboot</string>
    <string name="reboot_progress">Rebooting…</string>
    <string name="reboot_confirm">Your phone will reboot.</string>
    <string name="permlab_preventpower">prevent power key</string>
    <string name="permdesc_preventpower">Allows the app to override the power key</string>
    <string name="permlab_sendMockSms">send mock SMS messages</string>
    <string name="permdesc_sendMockSms">"Allows the app to send mock SMS messages. This allows an app to send messages to trusted apps. Malicious apps could send messages continuously, blocking the device's notification system and disrupting the user."</string>
    <string name="storage_sd_dock_card">Dock SD card</string>
    <string name="app_killed_message">App killed</string>
    <string name="global_action_reboot">Reboot</string>
    <string name="global_action_choose_profile">Profile</string>
    <string name="toast_rotation_unlocked">Display rotation unlocked</string>
    <string name="toast_rotation_locked">Display rotation locked</string>
    <string name="stylus_app_not_installed">%s is not installed</string>
    <string name="permlab_changePrivacyGuardState">enable or disable Privacy Guard</string>
    <string name="permdesc_changePrivacyGuardState">Allows the app to change whether another app runs with Privacy Guard. When an app is running with Privacy Guard, it will not have access to personal data such as contacts, call logs, or messages.</string>
    <string name="privacy_guard_notification">Privacy Guard active</string>
    <string name="privacy_guard_notification_detail">%1$s will not be able to access personal data</string>
    <string name="profile_picker_title">Profiles</string>
    <string name="profile_none">None</string>
    <string name="perf_profile_pwrsv">Power save</string>
    <string name="perf_profile_bal">Balanced</string>
    <string name="perf_profile_perf">Performance</string>
    <string name="permlab_interceptSmsSent">intercept outgoing SMS</string>
    <string name="permdesc_interceptSmsSent">Allows the app to intercept an outgoing SMS. Malicious apps may use this to prevent outgoing SMS messages.</string>
    <string name="permlab_receiveProtectedSms">receive protected SMS</string>
    <string name="permdesc_receiveProtectedSms">Allows the app to receive an incoming protected SMS.</string>
    <string name="permlab_modifyProtectedSmsList">modify protected SMS list</string>
    <string name="permdesc_modifyProtectedSmsList">Allows the app to modify the protected SMS address list.</string>
    <string name="permlab_resetBatteryStats">reset battery statistics</string>
    <string name="permdesc_resetBatteryStats">Allows an application to reset the current low-level battery use data.</string>
    <string name="permgrouplab_security">Security</string>
    <string name="permgroupdesc_security">Permissions related to device security information.</string>
    <string name="permlab_readPhoneBlacklist">read phone blacklist</string>
    <string name="permdesc_readPhoneBlacklist">Allows an app to read information about phone numbers that are blocked for incoming calls or messages.</string>
    <string name="permlab_changePhoneBlacklist">change phone blacklist</string>
    <string name="permdesc_changePhoneBlacklist">Allows an app to change the phone numbers that are blocked for incoming calls or messages.</string>
    <string name="permlab_accessThemeService">access theme service</string>
    <string name="permdesc_accessThemeService">Allows an app to access the theme service. Should never be needed for normal apps.</string>
    <string name="permlab_readThemes">read your theme info</string>
    <string name="permdesc_readThemesDesc">Allows the app to read your themes and determine which theme you have applied.</string>
    <string name="permlab_writeThemes">modify your themes</string>
    <string name="permdesc_writeThemesDesc">Allows the app to insert new themes and modify which theme you have applied.</string>
    <string name="permlab_setKeyguardWallpaper">set keyguard wallpaper</string>
    <string name="permdesc_setKeyguardWallpaper">Allows an app to change the lock screen wallpaper.</string>
    <string name="permlab_useHardwareFramework">use hardware framework</string>
    <string name="permdesc_useHardwareFramework">Allows an app access to the CM hardware framework.</string>
    <string name="permlab_keyguardApplicationWidget">set keyguard app widget</string>
    <string name="permdesc_keyguardApplicationWidget">Allows an app to set the app widget on the keyguard.</string>
    <string name="permlab_interceptPackageLaunch">intercept application launch</string>
    <string name="permdesc_interceptPackageLaunch">Allows an app to intercept launch of other applications</string>
    <string name="immersive_mode_confirmation_bottom">Swipe up from the bottom to exit full screen.</string>
    <string name="app_ops_access_camera">access the camera</string>
    <string name="app_ops_access_location">access your location</string>
    <string name="app_ops_access_notifications">read your notifications</string>
    <string name="app_ops_alarm_wakeup">wake up the device</string>
    <string name="app_ops_draw_on_top">draw on top</string>
    <string name="app_ops_keep_device_awake">keep your device awake</string>
    <string name="app_ops_make_phone_call">make a phone call</string>
    <string name="app_ops_modify_calendar">update your calendar</string>
    <string name="app_ops_modify_call_log">update the call log</string>
    <string name="app_ops_modify_clipboard">modify the clipboard</string>
    <string name="app_ops_modify_contacts">update your contacts</string>
    <string name="app_ops_modify_settings">update system settings</string>
    <string name="app_ops_play_audio">play audio</string>
    <string name="app_ops_post_notification">post a notification</string>
    <string name="app_ops_read_calendar">read your calendar</string>
    <string name="app_ops_read_call_log">read the call log</string>
    <string name="app_ops_read_clipboard">read the clipboard</string>
    <string name="app_ops_read_contacts">read your contacts</string>
    <string name="share">Share</string>
    <string name="websearch">Web Search</string>
</resources>